--- a/src/pages/opensource/Opensource.css
+++ b/src/pages/opensource/Opensource.css
@@ -66,6 +66,7 @@
   .opensource-grid-container {
     flex-direction: column;
     gap: 25px;
+    width: 95%;
   }
 
   .opensource-left-col {
@@ -75,11 +76,10 @@
   .opensource-right-col {
     width: 100%;
   }
-}
 
-@media (max-width: 600px) {
   .opensource-right-col .top-languages-card {
     height: auto !important;
-    min-height: 450px;
+    min-height: auto !important;
+    margin: 0 !important;
   }
 }
